--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -11,7 +11,8 @@ body {
 /* General & 'Reset' Stuff */
 
 .container {
-  width: 90%;
+    padding-top: 10px;
+    width: 90%;
   max-width: 600px;
   margin: 0 auto;
 }
@@ -28,7 +29,6 @@ h1, h2, h3, h4, h5, h6 {
 li {
   line-height: 1.4 ;
 }
-
 /* Header, <header>
    header   - container
    h1       - project name
@@ -38,9 +38,10 @@ li {
 header {
   background: rgba(0, 0, 0, 0.1);
   width: 100%;
-  border-bottom: 1px dashed #b5e853;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.7);
   padding: 20px 0;
-  margin: 0 0 40px 0;
+  padding-bottom: 10px;
+  margin: 0 0 0 0;
 }
 
 header h1 {
@@ -50,15 +51,15 @@ header h1 {
   font-weight: bold;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   color: #b5e853;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
-               0 0 5px rgba(181, 232, 83, 0.1),
-               0 0 10px rgba(181, 232, 83, 0.1);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3),
+               0 0 5px rgba(181, 232, 83, 0.5),
+               0 0 20px rgba(181, 232, 83, 0.5);
+
   letter-spacing: -1px;
   -webkit-font-smoothing: antialiased;
 }
 
 header h1:before {
-  content: "./ ";
   font-size: 24px;
 }
 
@@ -66,11 +67,12 @@ header h2 {
   font-size: 18px;
   font-weight: 300;
   color: #666;
+  text-align: left;
 }
 
 #downloads .btn {
   display: inline-block;
-  text-align: center;
+  text-align: left;
   margin: 0;
 }
 
@@ -134,7 +136,7 @@ ul li {
 }
 
 ul li:before {
-  content: ">>";
+  content: ""
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
   font-size: 13px;
   color: #b5e853;
@@ -203,6 +205,7 @@ hr {
   text-decoration: none;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
+  width: 180px !important;
 }
 
 .btn:hover {
@@ -244,4 +247,130 @@ a {
 
 .cf {
   zoom:1;
+}
+
+.avatar {
+    /* margin-left: 100px !important; */
+    margin-left: 87px;
+    margin-right:  120px;
+    width: 140px !important;
+    height: 140px !important;
+    /* padding: 0px; */
+    background: url("https://avatars0.githubusercontent.com/u/7609203?v=3&s=460");
+    background-size: 140px 140px;
+    background-repeat: no-repeat;
+ /* -webkit-filter: blur(1px); */
+  /* -moz-filter: blur(5px); */
+  /* -o-filter: blur(5px); */
+  /* -ms-filter: blur(5px); */
+  /* filter: blur(4px); */
+    /* background:rgba(205,206,255,0.4); */
+    padding: 0px;
+    border: 4px solid rgba(0, 0, 0, 0.7);
+    border-radius:10px;
+    /* border-radius:10px; */
+    transition: background 0.5s ease,
+    padding 5s linear;
+}
+
+.avatar:hover {
+    background: url("https://lh3.googleusercontent.com/F-6RX1JrCpp5_wSZVN_EWiwXaxIo842wLScFfbV6AJ6k-3cd6WX8nuIqZ7pzDRv3nPEy=w1920-h1080-no");
+    background-size: 140px 140px;
+    background-repeat: no-repeat;
+}
+
+.typed-cursor{
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+}
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+
+.main-container {
+    margin-right: 0px;
+    margin-left: -340px;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#side-bar {
+  /* padding-top: 40px; */
+  background: rgba(0, 0, 0, 0.1);
+  min-height: 700px;
+  /* padding-left: 12px; */
+  /* background: red; */
+}
+
+.my-body {
+    padding-left: 0px;
+}
+
+.my-interests {
+    /* background: rgba(0, 0, 0, 0.1); */
+    text-align: center;
+    padding: 12px;
+    padding-top: 12px;
+    margin: 0px;
+
+    -webkit-box-shadow: 0 8px 6px -5px #b5e853;
+    -moz-box-shadow: 0 8px 6px -5px #b5e853;
+     box-shadow: 0 9px 9px -10px #b5e853;
+}
+
+.interest-list{
+  /* background: rgba(0, 0, 0, 0.1); */
+  width: 100%;
+  padding-left: 12px;
+  padding-top: 30px;
+  margin: 0px;
+  margin-bottom: 30px;
+}
+
+.my-interests h4 {
+  margin: 0px;
+  font-size: 20px !important;
+  line-height: 1.5;
+  margin: 0 0 0 0px;
+  font-weight: bold;
+  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  color: #b5e853;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3),
+               0 0 5px rgba(181, 232, 83, 0.7),
+               0 0 20px rgba(181, 232, 83, 0.7);
+
+  letter-spacing: -1px;
+  -webkit-font-smoothing: antialiased;
+}
+/* http://codepen.io/supah/pen/WwrJpw */
+
+#downloads a:hover {
+  /* font-size: 20px !important; */
+  line-height: 1.5;
+  /* margin: 0 0 0 0px; */
+  font-weight: bold;
+  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  color: #b5e853;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3),
+               0 0 5px rgba(181, 232, 83, 0.9),
+               0 0 20px rgba(181, 232, 83, 0.9);
+
+  letter-spacing: -1px;
+  -webkit-font-smoothing: antialiased;
 }
