--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -11,10 +11,14 @@ body {
 /* General & 'Reset' Stuff */
 
 .container {
-    padding-top: 10px;
+    padding-top: 20px;
     width: 90%;
   max-width: 600px;
   margin: 0 auto;
+}
+
+.container h1 {
+    margin-bottom: 20px;
 }
 
 section {
@@ -271,6 +275,7 @@ a {
     /* border-radius:10px; */
     transition: background 0.5s ease,
     padding 5s linear;
+    margin-bottom: 10px; 
 }
 
 .avatar:hover {
@@ -313,17 +318,24 @@ a {
 #side-bar {
   /* padding-top: 40px; */
   background: rgba(0, 0, 0, 0.1);
-  min-height: 700px;
+  height: 800px;
   /* padding-left: 12px; */
   /* background: red; */
 }
 
-.my-body {
+#my-body{
     padding-left: 0px;
+}
+#myCarousel{
+    padding-left: 0px;
+    /* background: red; */
+    -webkit-box-shadow: 0 8px 6px -5px #b5e853;
+    -moz-box-shadow: 0 8px 6px -5px #b5e853;
+     box-shadow: -15px -11px 9px -10px black;
 }
 
 .my-interests {
-    /* background: rgba(0, 0, 0, 0.1); */
+    background: rgba(0, 0, 0, 0.2);
     text-align: center;
     padding: 12px;
     padding-top: 12px;
@@ -331,7 +343,7 @@ a {
 
     -webkit-box-shadow: 0 8px 6px -5px #b5e853;
     -moz-box-shadow: 0 8px 6px -5px #b5e853;
-     box-shadow: 0 9px 9px -10px #b5e853;
+     box-shadow: 0 9px 9px -10px black;
 }
 
 .interest-list{
@@ -345,15 +357,16 @@ a {
 
 .my-interests h4 {
   margin: 0px;
-  font-size: 20px !important;
+  font-size: 18px !important;
   line-height: 1.5;
   margin: 0 0 0 0px;
   font-weight: bold;
   font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  color: #b5e853;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3),
-               0 0 5px rgba(181, 232, 83, 0.7),
-               0 0 20px rgba(181, 232, 83, 0.7);
+  /* color: #b5e853; */
+  /* text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3), */
+  /*              0 0 5px rgba(181, 232, 83, 0.7), */
+  /*              0 0 20px rgba(181, 232, 83, 0.7); */
+  color: white;
 
   letter-spacing: -1px;
   -webkit-font-smoothing: antialiased;
@@ -373,4 +386,29 @@ a {
 
   letter-spacing: -1px;
   -webkit-font-smoothing: antialiased;
+}
+
+/* hr { */
+/*     background: red; */
+/*   height: 1px; */
+/*   padding-bottom: 1em; */
+/*   margin-top: 1em; */
+/*   line-height: 1px; */
+/*   /\* background: transparent url('../images/hr.png') 50% 0 no-repeat; *\/ */
+/*   border: none; */
+/* } */
+.carousel-inner {
+    height: 800px;
+}
+
+.intro {
+    padding: 20px 20px 5px 20px;
+    text-align: center;
+}
+
+.intro h4 {
+  color: #b5e853;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3),
+               0 0 5px rgba(181, 232, 83, 0.9),
+               0 0 20px rgba(181, 232, 83, 0.9);
 }
