--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -19,6 +19,8 @@ body {
 
 .container h1 {
     margin-bottom: 20px;
+    padding-left: 0px !important;
+    margin-left: -60px !important;
 }
 
 section {
